apps/garage-web/blog-beta/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web-blog-int-wynning-tech
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - "blog.${SECRET_INTERNAL_DOMAIN}"
  rules:
    - backendRefs:
        - name: garage-cluster
          namespace: default
          port: 3902
